src/test/deca/context/invalid/comp_bool.deca

// Description :
// Comparaison < sur boolean 
//
// Resultats :
// Erreur contextuelle
// opérateur < attend des numériques
//

{
  boolean b;
  b = true < false;
}